fix(mobile): energies on new player panel were not selectable because of the counters z-index

--- a/seasonssk.css
+++ b/seasonssk.css
@@ -392,6 +392,9 @@ h3 {
 	width: 100%;
 	position: absolute;
 	top: 0px;
+}
+
+#board_counters div {
 	z-index: 1;
 }
 
